/*
 * $Id: ChangeLog,v 1.3120 2004/06/30 15:02:33 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-30 11:39 UTC-0800 Tony Bretado <jabrecer@yahoo.com>
  * contrib/libct/ctwin.prg
    * wOpen()
	+ now handle shadows
    + ctw_memoedit()
    + CTW_SaveScreen()
    + CTW_RestScreen()
    * ctw_MAXCOL(lMode)
	+ added parameter lMode for CA-TOOLS compatibility
    * ctw_MAXROW(lMode)
	+ added parameter lMode for CA-TOOLS compatibility
    * METHOD MaxRow( lMode)
    * METHOD MaxCol( lMode)
    * METHOD Restore()
	+ now handle shadows
    + METHOD SaveScreen()
    + METHOD RestScreen()
    + METHOD MemoEdit()
    + METHOD WinShadow()     // shadow system
    + METHOD ColorShadow()   // shadow system
  * contrib/libct/include/ctwin.ch
    * MAXCOL(
	- remove second parenthesis for CA-TOOLS compatibility
    * MAXROW(
	- remove second parenthesis for CA-TOOLS compatibility
    + MEMOEDIT(
    + RESTSCREEN(
    + SAVESCREEN(

2004-06-30 09:52 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  + ./ChangeLog.020
  - ./Changelog.020
    ! Fixed typo in filename.

2004-06-30 14:00 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/video.c
    ! Fixed SETFONT() and VGAPALETTE().
  * include/hbdefs.h
    ! Fixed HB_XREGS under DJGPP.
  * source/debug/debugger.prg
    * Improved command window history a bit.
  * source/rtl/gtdos/mousedos.c
    ! Fixed hb_mouse_SetPos() and hb_mouse_CountButton().

2004-06-29 23:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/alert.prg
    * correction to my correction.

2004-06-29 23:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/alert.prg
    * corrected mouse selection behaviour so alert exits only when an item is selected

2004-06-29 20:27 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tbrowse.prg